[tool.poetry]
name = "dissertation-v1"
version = "1"
description = "\"Dependency management.\""
authors = ["Heloísa Oss Boll <122049835+hossboll@users.noreply.github.com>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
wandb = "^0.15.11"
matplotlib = "^3.8.0"
numpy = "1.25.2"
torch = "2.0.1"
torch-geometric = "2.3.1"
sklearn = "0.0.post7"
python-dotenv = "^1.0.0"
pandas = "1.5.3"
pyhealth = "^1.1.4"
gensim = "^4.3.2"
seaborn = "^0.13.0"
wordcloud = "^1.9.2"
plotly = "^5.17.0"
nbformat = ">=4.2.0"
datasketch = "^1.6.4"
torchmetrics = "^1.2.0"
notebook = "^7.0.6"
imbalanced-learn = "^0.11.0"
pytorch-lightning = "^2.1.0"
pyvis = "^0.3.2"
deepsnap = "^0.2.1"
scikit-learn = "^1.3.2"
transformers = "^4.36.2"
medcodemap = "^1.4"
xgboost = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
